# PX4-Autopilot

./: .gitignore  .gitmodules
ROMFS/px4fmu_common/init.d/: rcS
boards/nxp/ucans32k146/: cyphal.px4board
boards/px4/fmu-v6x/init/: rc.board_sensors
boards/px4/fmu-v6xrt/: default.px4board
boards/px4/fmu-v6xrt/init/: rc.board_defaults  rc.board_sensors
boards/px4/fmu-v6xrt/nuttx-config/nsh/: defconfig
msg/: CMakeLists.txt  SensorAvs.msg  SensorAvsAdc.msg  SensorAvsCmdAck.msg  SensorAvsEvtControl.msg  SensorAvsFftControl.msg  SensorAvsFftParams.msg  SensorAvsGnssControl.msg  SensorAvsMel.msg  SensorAvsPeakControl.msg  SensorAvsSdControl.msg  SensorAvsSyncControl.msg
src/drivers/adc/ads1115/: ads1115_params.c
src/drivers/cyphal/: CMakeLists.txt  CanardSocketCAN.cpp  CanardSocketCAN.hpp  Cyphal.cpp  Cyphal.hpp  Kconfig  PublicationManager.cpp  PublicationManager.hpp  SubscriptionManager.cpp  SubscriptionManager.hpp  parameters.c
src/drivers/cyphal/Publishers/: BasePublisher.hpp
src/drivers/cyphal/Services/: ServiceRequest.hpp
src/drivers/cyphal/Subscribers/: BaseSubscriber.hpp  DynamicPortSubscriber.hpp
src/drivers/uavcan/: uavcan_params.c
src/drivers/uavcan/uavcan_drivers/socketcan/driver/include/uavcan_nuttx/: socketcan.hpp
src/drivers/uavcan/uavcan_drivers/socketcan/driver/src/: socketcan.cpp
src/examples/ares_drone/: AdcFrameSubscriber.hpp  AresEventPublisher.hpp  AresEventSubscriber.hpp  CMakeLists.txt  GnssRelPosNedSubscriber.hpp  Kconfig  UavCanId.h  ares_drone.h  ares_drone_main.cpp  module.yaml
src/examples/ares_drone/ares/: AdcFrame.0.1.dsdl  Bearings.0.1.dsdl  EventParams.0.1.dsdl  FFTcontrol.0.1.dsdl  GnssImu.0.1.dsdl  GnssRelPosNed.0.1.dsdl
src/modules/ares_avs/: AdcFrameSubscriber.hpp  AresEventPublisher.hpp  AresEventServiceRequest.hpp  AresEventSubscriber.hpp  AresFftControlServiceRequest.hpp  AresFftParamServiceRequest.hpp  AresGnssControlServiceRequest.hpp  AresPeakServiceRequest.hpp  AresPubManager.cpp  AresPubManager.hpp  AresPublisher.hpp  AresSdCapControlServiceRequest.hpp  AresServiceManager.cpp  AresServiceManager.hpp  AresServiceRequest.hpp  AresSubManager.cpp  AresSubManager.hpp  AresSyncControlServiceRequest.hpp  AresSyncStateSubscriber.hpp  CMakeLists.txt  GnssPositionSubscriber.hpp  GnssRelPosNedSubscriber.hpp  GnssRtcmPublisher.hpp  Kconfig  MelIntensitySubscriber.hpp  UavCanId.h  ares_avs.cpp  ares_avs.h  module.yaml
src/modules/ares_avs/ares/: AdcFrame_0_1.h  Bearings.0.1.dsdl  Bearings_0_1.h  EscRpm.0.1.dsdl  EscRpm_0_1.h  EventParams.0.1.dsdl  EventParams_0_1.h  FFTcontrol_0_1.h  FFTencrypt.0.1.dsdl  FFTlength.0.1.dsdl  FFTlinear.0.1.dsdl  FFTspatial.0.1.dsdl  FFTwindow.0.1.dsdl  GnssControl.0.1.dsdl  GnssControl_0_1.h  GnssImu.0.1.dsdl  GnssImu_0_1.h  GnssPos.0.1.dsdl  GnssPos_0_1.h  GnssRelPosNed.0.1.dsdl  GnssRelPosNed_0_1.h  MelIntensity.0.1.dsdl  MelIntensity_0_1.h  PeakParams.0.1.dsdl  PeakParams_0_1.h  Rtcm.0.1.dsdl  Rtcm_0_1.h  SDcontrol.0.1.dsdl  SDcontrol_0_1.h  SyncControl.0.1.dsdl  SyncControl_0_1.h  TimeSync.0.1.dsdl
src/modules/logger/: logged_topics.cpp  params.c
src/modules/mavlink/: mavlink_main.cpp  mavlink_messages.cpp
src/modules/mavlink/streams/: AVS_STATUS.hpp  REL_POS_NED.hpp
